--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "terser-webpack-plugin": "^5.1.1"
   },
   "name": "curso-webpack-react",
-  "description": "",
+  "description": "Proyecto React + Webpack notas del [Curso de Webpack en Platzi](https://platzi.com/clases/webpack/)",
   "version": "1.0.0",
   "main": "index.js",
   "devDependencies": {
@@ -34,5 +34,13 @@
   },
   "keywords": [],
   "author": "Hector Moreira <hector.moreirac@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hectormoreira/curso-webpack-react.git"
+  },
+  "bugs": {
+    "url": "https://github.com/hectormoreira/curso-webpack-react/issues"
+  },
+  "homepage": "https://github.com/hectormoreira/curso-webpack-react#readme"
 }
